--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -97,7 +97,7 @@ style="min-height: 95vh"
                   href="../assets/images/poor-child-children-2061337-768x545.jpg"
                   class="flex items-center"
                 >
-                  <p class="mr-4 ">Read more</p>
+                  <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="14.125"
@@ -142,7 +142,7 @@ style="min-height: 95vh"
                   href="https://collect.criggzdesign.com/index.php/resources/mockups/notepad/"
                   class="flex items-center"
                 >
-                  <p class="mr-4">Read more</p>
+                  <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
                     width="14.125"
@@ -197,7 +197,7 @@ style="min-height: 95vh"
                     href="../assets/images/poor-child-children-2061337-768x545.jpg"
                     class="flex items-center"
                   >
-                    <p class="mr-4 ">Read more</p>
+                    <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="14.125"
@@ -242,7 +242,7 @@ style="min-height: 95vh"
                     href="https://collect.criggzdesign.com/index.php/resources/mockups/notepad/"
                     class="flex items-center"
                   >
-                    <p class="mr-4">Read more</p>
+                    <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
                     <svg
                       xmlns="http://www.w3.org/2000/svg"
                       width="14.125"
@@ -287,19 +287,19 @@ style="min-height: 95vh"
 
   <div class="bg-yellow-900 grid xl:grid-cols-4 xl:grid-flow-row sm:grid-flow-col md:grid-flow-col ontent-center items-center justify-center pb-20 ">
     <div class="  p-5 ">
-      <img src="../assets/images/compressed/DSC_0534-scaled-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg" class="rounded-lg max-w-full h-auto object-contain">
+      <img src="../../assets/images/compressed/1.jpg" class="rounded-lg max-w-full h-auto object-contain">
 
     </div>
     <div class="  p-5">
-      <img src="../assets/images/compressed/DSC_0559-scaled-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg" class="rounded-lg max-w-full h-auto object-contain">
+      <img src="../../assets/images/compressed/2.jpg" class="rounded-lg max-w-full h-auto object-contain">
 
     </div>
     <div class="  p-5">
-      <img src="../assets/images/compressed/DSC_0819-scaled-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg" class="rounded-lg max-w-full h-auto object-contain">
+      <img src="../../assets/images/compressed/3.jpg" class="rounded-lg max-w-full h-auto object-contain">
 
     </div>
     <div class=" p-5 ">
-      <img src="../assets/images/compressed/IMG_20170625_122714-scaled-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg " class="rounded-lg w-full   object-contain">
+      <img src="../../assets/images/compressed/4.jpg " class="rounded-lg w-full   object-contain">
 
     </div>
 
