--- a/src/app/images/images.component.html
+++ b/src/app/images/images.component.html
@@ -47,7 +47,7 @@
         <!-- Article -->
         <article class="overflow-hidden rounded-lg shadow-lg">
           <a href="#">
-            <img alt="Placeholder" class="block h-auto w-full" src="../assets/images/compressed/DSC_0559-scaled-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg" />
+            <img alt="Placeholder" class="block h-auto w-full" src="../../assets/images/compressed/IMG-20161011-WA0012-ox5mjdxa1jxm8b6fnpvna7a7nyi8h7ked2l07td2n4.jpg" />
           </a>
         </article>
         <!-- END Article -->
