auth and database conneection

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -22,6 +22,7 @@
         <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent hover:border-yellow-200" routerLink="/" routerLinkActive="active">Home</a></li>
         <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent hover:border-yellow-200" routerLink="/About" routerLinkActive="active">About</a></li>
         <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent  hover:border-yellow-200" routerLink="/services" routerLinkActive="active">Services</a></li>
+        <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent  hover:border-yellow-200" routerLink="/trust-members" routerLinkActive="active">Trust-Members</a></li>
         <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent  hover:border-yellow-200" routerLink="/images" routerLinkActive="active">Images</a></li>
         <li><a class="lg:p-4 py-3 px-0 block border-b-2 border-transparent hover:border-yellow-200 lg:mb-0 mb-2" routerLink="/contact" routerLinkActive="active">Contact</a></li>
       </ul>
