--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@ style="min-height: 95vh"
         </p>
         <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
           <a  
-          href="#"
+          href="/services"
           class="mt-10 flex flex-row  flex-wrap  justify-center   border-2 border-white rounded-md font-bold text-white   p-2 transition duration-300 ease-in-out hover:bg-yellow-500 hover:text-white "
           
           >
@@ -34,7 +34,7 @@ style="min-height: 95vh"
           <div class=" w-6  " > <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
             <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm3.707-9.293a1 1 0 00-1.414-1.414L9 10.586 7.707 9.293a1 1 0 00-1.414 1.414l2 2a1 1 0 001.414 0l4-4z" clip-rule="evenodd" />
           </svg></div>
-         <div class="pl-1">Our Services</div></a>
+         <div class="pl-1" >Our Services</div></a>
         </div>
         
       </div>
@@ -94,7 +94,7 @@ style="min-height: 95vh"
               <div class="mt-10 flex justify-between items-center">
                
                 <a
-                  href="../assets/images/poor-child-children-2061337-768x545.jpg"
+                  href="/services"
                   class="flex items-center"
                 >
                   <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
@@ -139,7 +139,7 @@ style="min-height: 95vh"
               <div class="mt-10 flex justify-between items-center">
                
                 <a
-                  href="https://collect.criggzdesign.com/index.php/resources/mockups/notepad/"
+                  href="/services"
                   class="flex items-center"
                 >
                   <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
@@ -194,7 +194,7 @@ style="min-height: 95vh"
                 <div class="mt-10 flex justify-between items-center">
                  
                   <a
-                    href="../assets/images/poor-child-children-2061337-768x545.jpg"
+                    href="/services"
                     class="flex items-center"
                   >
                     <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
@@ -239,7 +239,7 @@ style="min-height: 95vh"
                 <div class="mt-10 flex justify-between items-center">
                  
                   <a
-                    href="https://collect.criggzdesign.com/index.php/resources/mockups/notepad/"
+                    href="/services"
                     class="flex items-center"
                   >
                     <p class="mr-4 hover:text-black text-yellow-100">Read more</p>
