--- a/src/app/trust-members/trust-members.component.html
+++ b/src/app/trust-members/trust-members.component.html
@@ -1,1 +1,37 @@
-<p>trust-members works!</p>
+<app-navbar>
+
+</app-navbar>
+
+
+
+<div class="bg-yellow-900 text-3xl text-center p-10">
+    <h1 class="font-bold text-yellow-400 uppercase">Trust Members</h1>
+
+</div>
+
+
+<div class="bg-yellow-900 text-3xl text-center  flex flex-col " *ngFor="let members of list">
+    <div class="flex flex-row text-center m-auto">
+        <h1 class="p-2 font-bold text-yellow-300">
+           {{members.fullname}}
+        </h1>
+        
+        <h1 class="p-2 font-bold text-white">  {{members.position}}</h1>
+    </div>
+
+
+    
+</div>
+
+
+<div class="bg-yellow-900 text-2xl p-10 text-center">
+    <div>
+        <h1 class=" font-bold text-yellow-300 p-7">Login to Add Members </h1>
+        <a routerLink="/login" routerLinkActive="active" class="font-bold text-white bg-yellow-600 m-auto p-3 rounded-xl">Login</a>
+    </div>
+
+</div>
+
+
+
+<app-footer></app-footer>
