--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,7 @@ class="relative pt-16 pb-20 flex content-center items-center justify-center"
 style="min-height: 95vh"
 >
 <div
-  class="absolute top-0 w-full h-full bg-top bg-cover bg-hero-pattern"
-  
->
+  class="absolute top-0 w-full h-full bg-top bg-cover bg-hero-pattern">
   <span
     id="blackOverlay"
     class="w-full h-full absolute opacity-75 bg-black"
